--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "husky": "^8.0.2"
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.4"
   }
 }
